--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <section id="projects">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">Project 1</a>: Short description of the project.</li>
+                <li><a href="https://mjantone.github.io/githubproject/">Project 1</a>: I created simple portfolio.</li>
                 <li><a href="#">Project 2</a>: Short description of another project.</li>
                 <!-- Add more projects as list items -->
             </ul>
