--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <h2>Projects</h2>
             <ul>
                 <li><a href="https://mjantone.github.io/githubproject/">Project 1</a>: I created simple portfolio.</li>
-                <li><a href="#">Project 2</a>: Short description of another project.</li>
+                <li><a href="https://github.com/LearnComputerToday/githubproject">Project 2</a>: Source github of my simple portfolio project.</li>
                 <!-- Add more projects as list items -->
             </ul>
         </section>
