--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <section id="projects">
             <h2>Projects</h2>
             <ul>
-                <li><a href="https://mjantone.github.io/githubproject/">Project 1</a>: I created simple portfolio.</li>
-                <li><a href="https://github.com/LearnComputerToday/githubproject">Project 2</a>: Source github of my simple portfolio project.</li>
+                <li><a href="https://mjantone.github.io/githubproject">Project 1</a>:I created simple portfolio.</li>
+                <li><a href="https://github.com/LearnComputerToday/githubproject">Project 2</a>:Source github of my simple portfolio project.</li>
                 <!-- Add more projects as list items -->
             </ul>
         </section>
