--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>
-                You can send me an email @ mjantonov007@gmail.com
+                You can send me an email at mjantonov007@gmail.com
             </p>
         </section>
 
