--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Antone - Portfolio</title>
+    <title>Michael John Antone - Portfolio</title>
     <style>
         body, html {
             height: 100%;
@@ -54,7 +54,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>John Antone</h1>
+            <h1>Michael John Antone</h1>
             <nav>
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
@@ -66,7 +66,7 @@
             <h2>About Me</h2>
             <img src="profile_picture.jpg" alt="Your Name's Profile Picture" class="profile-pic">
             <p>
-                I am an Fullstack Developer and currently learning Wordpress Development.
+                I am an Fullstack Developer and currently learning Wordpress Development Bootcamp.
             </p>
         </section>
 
@@ -87,7 +87,7 @@
         </section>
 
         <footer>
-            <p>© 2023 by John Antone</p>
+            <p>© 2023 by Michael John Antone</p>
         </footer>
     </div>
 </body>
