--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <ul>
                 <li><a href="https://mjantone.github.io/githubproject">Project 1</a>:I created simple portfolio.</li>
                 <li><a href="https://github.com/LearnComputerToday/githubproject">Project 2</a>:Source github of my simple portfolio project.</li>
-                <li>  <a href="https://mjantone.github.io/githubproject">Projec 3</a>       </li>
+                <li>  <a href="https://mjantone.github.io/githubproject">Project 3</a>Created simple Portfolio.</li>
                 <!-- Add more projects as list items -->
             </ul>
         </section>
