--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             margin: 20px auto;
             display: block;
         }
+
+        #projects{
+        text-align: left;
+        }
     </style>
 </head>
 
@@ -75,7 +79,6 @@
             <ul>
                 <li><a href="https://mjantone.github.io/githubproject">Project 1</a>:I created simple portfolio.</li>
                 <li><a href="https://github.com/LearnComputerToday/githubproject">Project 2</a>:Source github of my simple portfolio project.</li>
-                <li>  <a href="https://mjantone.github.io/githubproject">Project 3</a>Created simple Portfolio.</li>
                 <!-- Add more projects as list items -->
             </ul>
         </section>
