--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             display: block;
         }
 
-        #projects > li{
+        #projects > ul{
         text-align: left;
         }
     </style>
